# BlenderPythonTutorial

./: .gitignore  README.md  __init__.py  blender_manifest.toml  log.txt  make_circle.py  menu.py  pyproject.toml  stub.py  update_wheels.py
btest/: main.py  make_circle.py  menu.py
