[tool.poetry]
name = "btest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fake-bpy-module = "^20241202"
matplotlib = "^3.9.3"
supervision = "^0.25.1"
pandas = "^2.2.3"

[tool.ruff]
# Enable rules to find and remove unused imports
select = ["F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
